# michigram

./: LICENSE  README.md  pyproject.toml
michigram/: bundle.py  cli.py  server.py
michigram/adapters/: base.py  claude_code.py  generic.py
michigram/afs/: mount.py  namespace.py  node.py
michigram/core/: config.py  state.py
michigram/pipeline/: constructor.py  evaluator.py  updater.py
michigram/repository/: history.py  memory.py  scratchpad.py
michigram/storage/: base.py  filesystem.py  sqlite.py
scripts/: install-launchd.sh  install.sh
src/michi_context_v2/: __init__.py  bundle.py  cli.py  server.py
src/michi_context_v2/adapters/: base.py  claude_code.py  generic.py
src/michi_context_v2/afs/: mount.py  namespace.py
src/michi_context_v2/core/: config.py  primitives.py
src/michi_context_v2/pipeline/: constructor.py  evaluator.py  updater.py
src/michi_context_v2/repository/: history.py  memory.py  scratchpad.py
src/michi_context_v2/storage/: base.py  filesystem.py  sqlite.py
tests/: conftest.py  test_bundle.py  test_cli.py  test_integration.py  test_server.py
tests/test_adapters/: test_claude_code.py  test_generic.py
tests/test_afs/: test_mount.py  test_namespace.py  test_node.py
tests/test_core/: test_config.py  test_primitives.py  test_state.py
tests/test_pipeline/: test_constructor.py  test_evaluator.py  test_updater.py  test_updater_adaptive.py
tests/test_repository/: test_history.py  test_memory.py  test_memory_advanced.py  test_scratchpad.py
tests/test_storage/: test_filesystem.py  test_sqlite.py  test_versioning.py
