[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "michigram"
version = "0.1.0"
description = "Context engineering system — AFS-based context management for AI agents"
requires-python = ">=3.10"

[project.scripts]
michigram = "michigram.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
